# doctoshotgun

./: .gitignore  Dockerfile  README  README.md  doctoshotgun.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_browser.py  test_cli_args.py
.github/workflows/: pytest.yml
doctoshotgun/: __main__.py  cli.py  doctolib.py  exceptions.py  tools.py
test_fixtures/: docto.config  doctor_response.json  search_result.json
tests/: test_browser.py  test_cli_args.py
tests/fixtures/: availabilities.json  doctor_response.json  search_result.json
