[metadata]
name = doctoshotgun
version = 1.0.1
description = Book vaccine slots on Doctolib
url = https://www.doctoshotgun.com
author = Romain Bignon
author_email = romain@doctoshotgun.com
maintainer = Romain Bignon
maintainer_email = romain@doctoshotgun.com
classifiers =
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Browsers
license = GNU GPL 3
license_file = COPYING
long-description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
    vaccine
    covid19

[options]
zip_safe = False
python_requires = >= 3.6
packages = find:

install_requires =
    woob
    cloudscraper
    python-dateutil
    termcolor
    colorama

tests_requires =
    pytest
    responses


[options.entry_points]
console_scripts =
    doctoshotgun = doctoshotgun.__main__:main


[flake8]
max-line-length = 120
exclude = dist,*.egg-info,build,.git,__pycache__
